Fixed wrong git fetch command

--- a/TPGit.tex
+++ b/TPGit.tex
@@ -144,7 +144,7 @@ Make sure \texttt{StudentA} has completed \ref{studenta:commit}
 \item Enter your credentials
 \item If  \texttt{StudentA} has completed \ref{studenta:commit} then git refuses you push because you cannot fast forward merge on branch origin/master.
 Solve this by executing the following command line\\
-\emph{git fetch origin/master} then \emph{git merge origin/master} or simply by using Pull in \textbf{GitExtensions}.
+\emph{git fetch origin} then \emph{git merge origin/master} or simply by using Pull in \textbf{GitExtensions}.
 \item Push again.
 \end{itemize}
 \subsection{Basic local branching, reintegrate by rebasing}
